kubernetes/participant/templates/example2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo2
  namespace: demo
spec:
  selector:
    app.kubernetes.io/name: demo2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
