kubernetes/participant/templates/example2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo3
  namespace: demo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: 'ip'

    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: demo3.k8s.aws-tests.skyworkz.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 8080
  tls:
  - hosts:
    - demo3.k8s.aws-tests.skyworkz.nl
